syntax = "proto3";

option go_package = "go-api-grpc/pb/transaction/v1";

package transaction.v1;

service TransactionService {
  rpc Create (CreateRequest) returns (Response) {}
  rpc List (ListRequest) returns (ListResponse) {}
}

message CreateRequest {
  string from_account = 1;
  string to_account = 2;
  double amount = 3;
}

message ListRequest {
  string user_id = 1;
  int64 page = 2;
  int64 per_page = 3;
}

message Response {
  string id = 1;
  string from_account = 2;
  string to_account = 3;
  double amount = 4;
  string currency = 5;
  string created_at = 6;
}

message ListResponse {
  repeated Response data = 1;
  int64 page = 2;
  int64 per_page = 3;
  int64 total_page = 4;
  int64 total_records = 5;
}